# stock-picking-funnel

./: .gitignore  AGENT_ISSUES.md  AGENT_RUNBOOK.md  README.md  app.py  implementation
agent_payload_templates/: 00-create-report.template.json  01-data_collection.patch.template.json  02-screening.patch.template.json  03-business_underwriting.patch.template.json  04-management_underwriting.patch.template.json  05-financial_underwriting.patch.template.json  06-valuation_position_size.patch.template.json  07-execution_rules.patch.template.json  README.md  manifest.json
config/: company_import_priority.json  default_stages.json
funnel_app/: __init__.py  config.py  db.py  document_normalizer.py  runtime.py  server.py  template_parser.py
static/: app.js  index.html  styles.css
tests/: test_api.py  test_db.py  test_template_parser.py
tools/: generate_report_payload_templates.mjs  import_companies.py  (+2 more)
v2/api/: README.md  alembic.ini  pyproject.toml
v2/api/alembic/: env.py
v2/api/alembic/versions/: 20260420_000001_initial_v2_schema.py  20260420_000002_shadow_endpoint_snapshots.py  20260420_000003_owner_auth_tables.py  20260420_000004_owner_api_tokens.py  20260503_000005_section_modules_and_agent_runs.py
v2/api/app/: auth.py  config.py  integrity.py  legacy_bridge.py  main.py  native_authority.py  postgres_services.py  runtime_state.py  service.py  shadow.py  storage.py
v2/api/app/db/: __init__.py  models.py  session.py
v2/api/app/routers/: compatibility.py  mcp.py
v2/api/stock_picking_funnel_v2_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+358 files in other folders)
