[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-picking-funnel-v2-api"
version = "0.1.0"
description = "Zero-loss web migration backend for Stock Picking Funnel"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13,<2",
  "boto3>=1.35,<2",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic>=2.9,<3",
  "python-multipart>=0.0.9,<1",
  "sqlalchemy>=2.0.36,<3",
  "uvicorn>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[tool.pytest.ini_options]
testpaths = ["../tests"]

[tool.alembic]
script_location = "alembic"

[tool.setuptools]
packages = ["app"]
